# papos_backend

./: .gitignore  pyproject.toml
app/: main.py
app/core/: gestion_image.py  security.py
app/routes/: administration.py  articles.py  authentification.py
app/schemas/: administration.py  articles.py  authentification.py
app/services/: administration.py  articles.py  authentification.py
prisma/: schema.prisma
prisma/migrations/20250728225731_papos/: migration.sql
